--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "websocket_chat",
   "version": "1.0.0",
   "description": "",
-  "main": ".eslintrc.js",
+  "devDependencies": {
+    "parcel": "^2.3.2",
+    "parcel-plugin-nuke-dist": "^1.0.1"
+  },
   "dependencies": {
     "gh-pages": "^3.2.3"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "dev": "parcel client/index.html",
+    "build": "parcel build client/index.html --public-url /websocket_chat/",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build"
   },
   "repository": {
     "type": "git",
